<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2024 Mima Kang / All rights reserved.
  ~
  ~ Use of this source code is governed by Apache v2.0
  -->

<resources>
    <string name="app_name">SayIt</string>
    <!-- Informational Text -->
    <string name="info_next_alarm_time">After %s hours and %s minutes,\n the alarm will go off.</string>
    <string name="info_timeout">The alarm will stop ringing after</string>
    <string name="info_snooze">Alarm will ring again after"</string>
    <!-- Label -->
    <string name="alarms">Alarms</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="timeout">TimeOut</string>
    <string name="snooze">Snooze</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <!-- Text -->
    <string name="hour_abbr">h</string>
    <string name="minute_short">%s Min</string>
    <string name="minute_abbr">m</string>
    <!-- ContentDescription -->
    <string name="action_close">Close</string>
    <string name="action_add_alarm">Add alarm</string>
    <string name="action_delete_alarm">Delete alarm</string>
    <string name="action_edit">Edit item aligned</string>
    <string name="action_open_settings">Open settings</string>
    <string name="action_set_alarm_time">Set alarm time</string>
    <string name="action_navigate_back">Return to previous screen</string>
    <string name="action_check">Select or confirm this option</string>
    <string name="component_wheel_picker">Select a value using the wheel picker</string>
</resources>